--- a/HouseManage/HouseManage/Views/DailyCheck/Index.cshtml
+++ b/HouseManage/HouseManage/Views/DailyCheck/Index.cshtml
@@ -173,7 +173,7 @@
     };
     function GetIndex() {
         this.temp.page = 1;
-        mui.ajax('/DailyCheck/Index', {
+        mui.ajax('Index', {
             data: temp,
             type: 'get',
             //timeout: 50000,
