--- a/HouseManage/HouseManage/Views/DailyCheck/EditCheckResult.cshtml
+++ b/HouseManage/HouseManage/Views/DailyCheck/EditCheckResult.cshtml
@@ -68,7 +68,7 @@
                                     else
                                     {
                                         <div class="mui-col-sm-6 mui-col-xs-6" id="statusbutton">
-                                            <button type="button" class="mui-btn" id="@item.CHECK_RESULT_ID.Trim()==''?@item.Code:@item.CHECK_RESULT_ID" name="@item.Code" value="@item.CHECK_DETAIL_RESULT" style="width:100%">@item.Name <span class="mui-icon mui-icon-info"></span></button>
+                                            <button type="button" class="mui-btn" id="@item.Code" name="@item.Code" value="@item.CHECK_DETAIL_RESULT" style="width:100%">@item.Name <span class="mui-icon mui-icon-info"></span></button>
                                         </div>
                                     }
                                 }
@@ -200,7 +200,7 @@
         if (RESULT_ID.trim() == "") {
             console.log(Code);
             temp.INSERTINFO[Code] = 0;
-            document.getElementsByName(Code).className = "mui-btn mui-btn-danger";
+            document.getElementById(Code).className = "mui-btn mui-btn-danger";
         }
         else {
             var ele = document.getElementById(RESULT_ID);
