--- a/HouseManage/HouseManage/Views/Merchants/ShopInfos.cshtml
+++ b/HouseManage/HouseManage/Views/Merchants/ShopInfos.cshtml
@@ -41,9 +41,9 @@
             </li>
         </ul>
         <div style="text-align:center;font-size:13px">
-            <a herf="#" id="a_green"><img src="/img/green.jpg" class="img_color" />&nbsp;已出售(<span id="s_green">0</span>)</a>&nbsp;&nbsp;&nbsp;
-            <a herf="#" id="a_gray"><img src="/img/gray.jpg" class="img_color" />&nbsp;未使用(<span id="s_gray">0</span>)</a>&nbsp;&nbsp;&nbsp;
-            <a herf="#" id="a_yellow"><img src="/img/yellow.jpg" class="img_color" />&nbsp;已出租(<span id="s_yellow">0</span>)</a>
+            <a herf="#" id="a_green"><img src="/wxstatic/img/green.jpg" class="img_color" />&nbsp;已出售(<span id="s_green">0</span>)</a>&nbsp;&nbsp;&nbsp;
+            <a herf="#" id="a_gray"><img src="/wxstatic/img/gray.jpg" class="img_color" />&nbsp;未使用(<span id="s_gray">0</span>)</a>&nbsp;&nbsp;&nbsp;
+            <a herf="#" id="a_yellow"><img src="/wxstatic/img/yellow.jpg" class="img_color" />&nbsp;已出租(<span id="s_yellow">0</span>)</a>
         </div>
         <!--数据列表-->
         <ul id="list_ul" class="mui-table-view mui-table-view-chevron"></ul>
@@ -196,13 +196,13 @@
                     li.className = 'mui-table-view-cell';
                     //li.innerHTML = '<a class="mui-navigate-right">Item ' + (i + 1) + '</a>';
                     if (data.list[i].FWSX == 0) {
-                        li.innerHTML = '<div class="mui-navigate-right" fwid="' + data.list[i].FWID + '"><img style="width:15px;height:10px;" src="/img/gray.jpg" />&nbsp;' + data.list[i].FWMC + '</div>';
+                        li.innerHTML = '<div class="mui-navigate-right" fwid="' + data.list[i].FWID + '"><img style="width:15px;height:10px;" src="/wxstatic/img/gray.jpg" />&nbsp;' + data.list[i].FWMC + '</div>';
                     }
                     else if (data.list[i].FWSX == 1) {
-                        li.innerHTML = '<div class="mui-navigate-right" fwid="' + data.list[i].FWID + '"><img style="width:15px;height:10px;" src="/img/yellow.jpg" />&nbsp;' + data.list[i].FWMC + '</div>';
+                        li.innerHTML = '<div class="mui-navigate-right" fwid="' + data.list[i].FWID + '"><img style="width:15px;height:10px;" src="/wxstatic/img/yellow.jpg" />&nbsp;' + data.list[i].FWMC + '</div>';
                     }
                     else if (data.list[i].FWSX == 2) {
-                        li.innerHTML = '<div class="mui-navigate-right" fwid="' + data.list[i].FWID + '"><img style="width:15px;height:10px;" src="/img/green.jpg" />&nbsp;' + data.list[i].FWMC + '</div>';
+                        li.innerHTML = '<div class="mui-navigate-right" fwid="' + data.list[i].FWID + '"><img style="width:15px;height:10px;" src="/wxstatic/img/green.jpg" />&nbsp;' + data.list[i].FWMC + '</div>';
                     }
                     else {
                         li.innerHTML = '<div class="mui-navigate-right" fwid="' + data.list[i].FWID + '">&nbsp;&nbsp;&nbsp;' + data.list[i].FWMC + '</div>';
@@ -245,13 +245,13 @@
                         li.className = 'mui-table-view-cell';
 
                         if (data.list[i].FWSX == 0) {
-                            li.innerHTML = '<div class="mui-navigate-right" fwid="'+ data.list[i].FWID +'"><img style="width:15px;height:10px;" src="/img/gray.jpg" >&nbsp;' + data.list[i].FWMC + '</div>';
+                            li.innerHTML = '<div class="mui-navigate-right" fwid="' + data.list[i].FWID +'"><img style="width:15px;height:10px;" src="/wxstatic/img/gray.jpg" >&nbsp;' + data.list[i].FWMC + '</div>';
                         }
                         else if (data.list[i].FWSX == 1) {
-                            li.innerHTML = '<div class="mui-navigate-right" fwid="' + data.list[i].FWID + '"><img style="width:15px;height:10px;" src="/img/yellow.jpg" >&nbsp;' + data.list[i].FWMC + '</div>';
+                            li.innerHTML = '<div class="mui-navigate-right" fwid="' + data.list[i].FWID + '"><img style="width:15px;height:10px;" src="/wxstatic/img/yellow.jpg" >&nbsp;' + data.list[i].FWMC + '</div>';
                         }
                         else if (data.list[i].FWSX == 2) {
-                            li.innerHTML = '<div class="mui-navigate-right" fwid="' + data.list[i].FWID + '"><img style="width:15px;height:10px;" src="/img/green.jpg" >&nbsp;' + data.list[i].FWMC + '</div>';
+                            li.innerHTML = '<div class="mui-navigate-right" fwid="' + data.list[i].FWID + '"><img style="width:15px;height:10px;" src="/wxstatic/img/green.jpg" >&nbsp;' + data.list[i].FWMC + '</div>';
                         }
                         else {
                             li.innerHTML = '<div class="mui-navigate-right">&nbsp;&nbsp;&nbsp;' + data.list[i].FWMC + '</div>';
