--- a/HouseManage/HouseManage/Views/Shared/_Layout.cshtml
+++ b/HouseManage/HouseManage/Views/Shared/_Layout.cshtml
@@ -7,18 +7,18 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>@ViewData["Title"]</title>
 
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
-    <link href="~/css/mui.min.css" rel="stylesheet" />
-    <link href="~/css/mui.loading.css" rel="stylesheet" />
-    <link href="~/css/mui.picker.all.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/wxstatic/lib/bootstrap/dist/css/bootstrap.css" />
+    <link href="~/wxstatic/css/mui.min.css" rel="stylesheet" />
+    <link href="~/wxstatic/css/mui.loading.css" rel="stylesheet" />
+    <link href="~/wxstatic/css/mui.picker.all.css" rel="stylesheet" />
 
 </head>
 <body>
-    <script src="~/lib/jquery/dist/jquery.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    <script src="~/js/mui.min.js"></script>
-    <script src="~/js/mui.loading.js"></script>
-    <script src="~/js/mui.picker.all.js"></script>
+    <script src="~/wxstatic/lib/jquery/dist/jquery.js"></script>
+    <script src="~/wxstatic/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="~/wxstatic/js/mui.min.js"></script>
+    <script src="~/wxstatic/js/mui.loading.js"></script>
+    <script src="~/wxstatic/js/mui.picker.all.js"></script>
     @RenderBody()
     @RenderSection("Scripts", required: false)
 </body>
