修改引用文件

--- a/HouseManage/HouseManage/Views/User/Register.cshtml
+++ b/HouseManage/HouseManage/Views/User/Register.cshtml
@@ -30,8 +30,8 @@
         <button type="button" class="mui-btn mui-btn-primary" style="width:91%;" id="submit">绑定</button>
     </div>
 </div>
-<script src="../js/mui.picker.js"></script>
-<script src="../js/mui.poppicker.js"></script>
+<script src="~/wxstatic/js/mui.picker.js"></script>
+<script src="~/wxstatic/js/mui.poppicker.js"></script>
 <script type="text/javascript">
     jq = $;
     (function ($) {
