--- a/HouseManage/HouseManage/Views/MyShop/Payment.cshtml
+++ b/HouseManage/HouseManage/Views/MyShop/Payment.cshtml
@@ -11,11 +11,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="stylesheet" href="~/css/mui.min.css">
-    <link rel="stylesheet" href="~/css/mui.picker.css">
-    <link rel="stylesheet" href="~/css/mui.poppicker.css">
-    <link href="~/css/mui.loading.css" rel="stylesheet" />
-    <script src="~/lib/jquery/dist/jquery.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="~/wxstatic/css/mui.min.css">
+    <link rel="stylesheet" href="~/wxstatic/css/mui.picker.css">
+    <link rel="stylesheet" href="~/wxstatic/css/mui.poppicker.css">
+    <link href="~/wxstatic/css/mui.loading.css" rel="stylesheet" />
+    <script src="~/wxstatic/lib/jquery/dist/jquery.min.js" type="text/javascript"></script>
     <style type="text/css">
         /*隐藏google touch事件错误*/
         * {
@@ -204,13 +204,13 @@
             </div>
         </div>
     </div>
-    <script src="~/js/stringFormat.js"></script>
-    <script src="~/js/mui.min.js"></script>
-    <script src="~/js/mui.picker.js"></script>
-    <script src="~/js/mui.poppicker.js"></script>
-    <script src="~/js/mui.pullToRefresh.js"></script>
-    <script src="~/js/mui.pullToRefresh.material.js"></script>
-    <script src="~/js/mui.loading.js"></script>
+    <script src="~/wxstatic/js/stringFormat.js"></script>
+    <script src="~/wxstatic/js/mui.min.js"></script>
+    <script src="~/wxstatic/js/mui.picker.js"></script>
+    <script src="~/wxstatic/js/mui.poppicker.js"></script>
+    <script src="~/wxstatic/js/mui.pullToRefresh.js"></script>
+    <script src="~/wxstatic/js/mui.pullToRefresh.material.js"></script>
+    <script src="~/wxstatic/js/mui.loading.js"></script>
     <script>
         jq = $;
         var height = (window.innerHeight > 0) ? window.innerHeight : screen.height; //当前加载的浏览器的高度
