--- a/HouseManage/HouseManage/Views/MyShop/ShopDetail.cshtml
+++ b/HouseManage/HouseManage/Views/MyShop/ShopDetail.cshtml
@@ -11,10 +11,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="stylesheet" href="~/css/mui.min.css">
-    <link rel="stylesheet" href="~/css/mui.picker.css">
-    <link rel="stylesheet" href="~/css/mui.poppicker.css">
-    <script src="~/lib/jquery/dist/jquery.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="~/wxstatic/css/mui.min.css">
+    <link rel="stylesheet" href="~/wxstatic/css/mui.picker.css">
+    <link rel="stylesheet" href="~/wxstatic/css/mui.poppicker.css">
+    <script src="~/wxstatic/lib/jquery/dist/jquery.min.js" type="text/javascript"></script>
     <style>
         /*隐藏google touch事件错误*/
         * {
@@ -114,9 +114,9 @@
             </div>
         </div>
     </div>
-    <script src="../js/mui.min.js"></script>
-    <script src="../js/mui.picker.js"></script>
-    <script src="../js/mui.poppicker.js"></script>
+    <script src="~/wxstatic/js/mui.min.js"></script>
+    <script src="~/wxstatic/js/mui.picker.js"></script>
+    <script src="~/wxstatic/js/mui.poppicker.js"></script>
     <script>
         jq = $;
         //mui
