--- a/HouseManage/HouseManage/Views/Merchants/MerchantShopInfoListDetail.cshtml
+++ b/HouseManage/HouseManage/Views/Merchants/MerchantShopInfoListDetail.cshtml
@@ -24,12 +24,12 @@
             </li>
 
             <li class="mui-table-view-cell">
-                <div><img src="/img/book.png" style="width:24px;height:20px;vertical-align:text-bottom" />经营内容</div>
+                <div><img src="/wxstatic/img/book.png" style="width:24px;height:20px;vertical-align:text-bottom" />经营内容</div>
                 <div class="div_text"><p id="d_jynr"></p></div>
 
             </li>
             <li class="mui-table-view-cell">
-                <div><img src="~/img/house1.png" style="width:24px;height:20px;vertical-align:text-bottom" />商户详情</div>
+                <div><img src="~/wxstatic/img/house1.png" style="width:24px;height:20px;vertical-align:text-bottom" />商户详情</div>
 
                 <p class='mui-ellipsis'>姓名</p>
                 <div id="YZ_ZHXM" class="div_text"></div>
@@ -45,7 +45,7 @@
                 <div id="YZ_ISSBLET" class="div_text"></div>
                 <hr />
                 <div id="zz_div" style="display:none">
-                    <div><img src="~/img/house2.png" style="width:24px;height:20px;vertical-align:text-bottom" />转租商户信息</div>
+                    <div><img src="~/wxstatic/img/house2.png" style="width:24px;height:20px;vertical-align:text-bottom" />转租商户信息</div>
                     <p class='mui-ellipsis'>姓名</p>
                     <div id="Z_ZHXM" class="div_text"></div>
                     <p class='mui-ellipsis'>性别</p>
@@ -62,7 +62,7 @@
 
             </li>
             <li class="mui-table-view-cell">
-                <div><img src="~/img/money.png" style="width:24px;height:20px;vertical-align:text-bottom" />缴费记录</div>
+                <div><img src="~/wxstatic/img/money.png" style="width:24px;height:20px;vertical-align:text-bottom" />缴费记录</div>
                 <div style="height:5px;"></div>
                 <div id="div_parent">
                     <div class="mui-card padd_div">
