--- a/HouseManage/HouseManage/Views/DailyCheck/Index.cshtml
+++ b/HouseManage/HouseManage/Views/DailyCheck/Index.cshtml
@@ -148,7 +148,7 @@
         //    limit: 10,
         //    page: 1
         //};
-        mui.ajax('/DailyCheck/PartDailyCheckList', {
+        mui.ajax('/PartDailyCheckList', {
             data: this.temp,
             type: 'get',
             //timeout: 50000,
