--- a/HouseManage/HouseManage/Views/Merchants/MerchantShopInfoListDetail.cshtml
+++ b/HouseManage/HouseManage/Views/Merchants/MerchantShopInfoListDetail.cshtml
@@ -15,7 +15,7 @@
         <ul class="mui-table-view">
 
             <li class="mui-table-view-cell mui-media">
-                <img class="mui-pull-left" style="width:120px;height:105px;" src="/img/dishang.jpg">
+                <img class="mui-pull-left" style="width:120px;height:105px;" src="/wxstatic/img/dishang.jpg">
                 <div class="mui-media-body" style="padding-left:8px;padding-top:15px;">
                     <div id="d_fwmc" class="oFlow"></div>
                     <p id="d_zlwz" class='mui-ellipsis'></p>
@@ -29,7 +29,7 @@
 
             </li>
             <li class="mui-table-view-cell">
-                <div><img src="~/wxstatic/img/house1.png" style="width:24px;height:20px;vertical-align:text-bottom" />商户详情</div>
+                <div><img src="/wxstatic/img/house1.png" style="width:24px;height:20px;vertical-align:text-bottom" />商户详情</div>
 
                 <p class='mui-ellipsis'>姓名</p>
                 <div id="YZ_ZHXM" class="div_text"></div>
@@ -43,9 +43,10 @@
                 <div id="YZ_EMAIL" class="div_text"></div>
                 <p class='mui-ellipsis'>是否转租</p>
                 <div id="YZ_ISSBLET" class="div_text"></div>
-                <hr />
+                
                 <div id="zz_div" style="display:none">
-                    <div><img src="~/wxstatic/img/house2.png" style="width:24px;height:20px;vertical-align:text-bottom" />转租商户信息</div>
+                    <hr />
+                    <div><img src="/wxstatic/img/house2.png" style="width:24px;height:20px;vertical-align:text-bottom" />转租商户信息</div>
                     <p class='mui-ellipsis'>姓名</p>
                     <div id="Z_ZHXM" class="div_text"></div>
                     <p class='mui-ellipsis'>性别</p>
@@ -62,10 +63,10 @@
 
             </li>
             <li class="mui-table-view-cell">
-                <div><img src="~/wxstatic/img/money.png" style="width:24px;height:20px;vertical-align:text-bottom" />缴费记录</div>
-                <div style="height:5px;"></div>
+                <div><img src="/wxstatic/img/money.png" style="width:24px;height:20px;vertical-align:text-bottom" />缴费记录</div>
+               
                 <div id="div_parent">
-                    <div class="mui-card padd_div">
+                    <div class="mui-card padd_div" style="margin-left:0px">
                         <p class='mui-ellipsis'>缴费类型</p>
                         <div id="YZ_ZHXM" class="div_text">物业费</div>
                         <p class='mui-ellipsis'>起始时间</p>
