--- a/HouseManage/HouseManage/Views/DailyCheck/DailyCheckDetail.cshtml
+++ b/HouseManage/HouseManage/Views/DailyCheck/DailyCheckDetail.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "DailyCheckDetail";
+    ViewData["Title"] = "检查结果";
     Layout = "~/Views/Shared/_Layout.cshtml";
     @model List<Data.MSSQL.Model.BusinessModel.TaskListModel>;
 }
